feat: auth + catalog
